05-Scaling/hello-node-v1.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-node
  labels:
    tag: hello-node
spec:
  ports:
    - port: 8090
      targetPort: 8080
  selector:
    tag: hello-node
    tier: frontend
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-node
  labels:
    tag: hello-node
spec:
  selector:
    matchLabels:
      tag: hello-node
      tier: frontend
  template:
    metadata:
      labels:
        tag: hello-node
        tier: frontend
    spec:
      containers:
      - image: hello-node:v1
        imagePullPolicy: Never
        name: hello-node
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: 100m
