05-Scaling/hello-spring-v1.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-spring
  labels:
    tag: hello-spring
spec:
  ports:
    - port: 8091
      targetPort: 8080
  selector:
    tag: hello-spring
    tier: frontend
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-spring
  labels:
    tag: hello-spring
spec:
  selector:
    matchLabels:
      tag: hello-spring
      tier: frontend
  template:
    metadata:
      labels:
        tag: hello-spring
        tier: frontend
    spec:
      containers:
      - image: hello-spring:v1
        imagePullPolicy: Never
        name: hello-spring
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: 200m
