05-Scaling/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: helloworld-ingress
spec:
  rules:
  - host: hello-node.local.minikube.com
    http:
      paths:
      - backend:
          serviceName: hello-node
          servicePort: 8090
  - host: hello-spring.local.minikube.com
    http:
      paths:
      - backend:
          serviceName: hello-spring
          servicePort: 8091
